nullaway_error_2afc4a8f-134e-4d16-8f1f-e9054fb4c58b.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/CustomPropertyAdapter.java:82: error: [NullAway] dereferenced expression this.type is @Nullable
      if (this.type.equals(PropertyType.STRING)) {
                   ^
    (see http://t.uber.com/nullaway )
